--- a/config/voc.yaml
+++ b/config/voc.yaml
@@ -7,21 +7,26 @@ dataset_params:
 model_params:
   im_channels : 3
   backbone_channels : 512
-  backbone_spatial_size : 7
+  conv_spatial_size : 7
   yolo_conv_channels : 1024
   leaky_relu_slope : 0.1
   fc_dim : 4096
   fc_dropout : 0.5
   S : 7
   B : 2
+  use_sigmoid : True
+  use_conv : True
 
 train_params:
   task_name: 'voc'
   seed: 1111
-  acc_steps: 1 # increase you want to get gradients from >1 steps(kind of mimicking >1 batch size)
-  log_steps: 1
+  acc_steps: 1 # increase if you want to get gradients from >1 steps(kind of mimicking >1 batch size)
+  log_steps: 100
   num_epochs: 135
   batch_size: 64
   lr_steps: [ 50, 75, 100, 125 ]
   lr: 0.001
-  ckpt_name: 'yolo_voc2007_best.pth'
+  infer_conf_threshold : 0.2
+  eval_conf_threshold : 0.001
+  nms_threshold : 0.5
+  ckpt_name: 'yolo_voc2007.pth'
