--- a/config/voc.yaml
+++ b/config/voc.yaml
@@ -1,8 +1,12 @@
 dataset_params:
-  train_im_sets: ['data/VOC2007', 'data/VOC2012']
-  test_im_sets: ['data/VOC2007-test']
-  num_classes : 20
-  im_size : 448
+  train_im_sets: ['data\\VOC2007', 'data\\VOC2012']
+  test_im_sets: ['data\\VOC2007-test']
+  num_classes : 3
+  im_size : 112
+  labels: ['person', 'dog', 'cat']
+  #['person', 'bird', 'cat', 'cow', 'dog', 'horse', 'sheep',
+  #          'aeroplane', 'bicycle', 'boat', 'bus', 'car', 'motorbike', 'train',
+  #          'bottle', 'chair', 'diningtable', 'pottedplant', 'sofa', 'tvmonitor']
 
 model_params:
   im_channels : 3
@@ -23,7 +27,7 @@ train_params:
   acc_steps: 1 # increase if you want to get gradients from >1 steps(kind of mimicking >1 batch size)
   log_steps: 100
   num_epochs: 135
-  batch_size: 64
+  batch_size: 256
   lr_steps: [ 50, 75, 100, 125 ]
   lr: 0.001
   infer_conf_threshold : 0.2
